<resources>
    <string name="app_name">极光魔链</string>
    <string name="app_name1">极光魔链</string>
    <string name="app_desc">企业级深度链接服务，高效提升移动用户增长和活跃</string>
    <string name="openScheme">一链直达</string>
    <string name="replay">场景还原</string>
    <string name="params">无码邀请</string>
    <string name="models">丰富模板页</string>
    <string name="schemeDescription">分享内容集成短链服务，用户点击可唤醒已安装的应用并跳转至目标页面</string>
    <string name="chooseScenes">选择体验场景</string>
    <string name="schemeScenesDesc">选择场景\n请下载魔链APP以便更好体验一链直达</string>
    <string name="sceneAK">爱看视频</string>
    <string name="schemeXS">小说阅读</string>
    <string name="cancel">取消</string>
    <string name="todo">TODO</string>
    <string name="schemeTitle">一链直达</string>
    <string name="schme_1">JMLink一链直达</string>
    <string name="schme_2">分享内容集成短链服务，用户点击可唤醒已安装 的应用并跳转目标页面</string>
    <string name="scheme_3">请先下载魔链\nAPP以便更直观的体验一链直达功能</string>
    <string name="share_wx">微信</string>
    <string name="share_wxp">朋友圈</string>
    <string name="share_browser">浏览器打开</string>
    <string name="share_qqk">QQ空间</string>
    <string name="share_qq">QQ</string>
    <string name="share_copy">拷贝</string>
    <string name="novel">&#160;&#160;&#160;&#160;&#160;&#160;&#160;话说天下大势，分久必合，合久必分：周末七国分争，并入于秦；及秦灭之后，楚、汉分争，又并入于汉；汉朝自高祖斩白蛇而起义，一统天下，后来光武中兴，传至献帝，遂分为三国。推其致乱之由，殆始于桓、灵二帝。桓帝禁锢善类Ώ]，崇信宦官。及桓帝崩，灵帝即位，大将军窦武、太傅陈蕃，共相辅佐；时有宦官曹节等弄权，窦武、陈蕃谋诛之，机事不密，反为所害，中涓自此愈横。  建宁二年四月望日，帝御温德殿。方升座，殿角狂风骤起，只见一条大青蛇，从梁上飞将下来，蟠于椅上。帝惊倒，左右急救入宫，百官俱奔避。须臾，蛇不见了。忽然大雷大雨，加以冰雹，落到半夜方止，坏却房屋无数。建宁四年二月，洛阳地震；又海水泛溢，沿海居民，尽被大浪卷入海中。光和元年，雌鸡化雄。六月朔，黑气十馀丈，飞入温德殿中。秋七月，有虹现于玉堂，五原山岸，尽皆崩裂。种种不祥，非止一端。帝下诏问群臣以灾异之由，议郎蔡邕上疏，以为蜺堕鸡化，乃妇寺干政之所致，言颇切直。帝览奏叹息，因起更衣。曹节在后窃视，悉宣告左右；遂以他事陷邕于罪，放归田里。后张让、赵忠、封谞、段珪、曹节、侯览、蹇硕、程旷、夏恽、郭胜十人朋比为奸，号为“十常侍”。帝尊信张让，呼为“阿父”。朝政日非，以致天下人心思乱，盗贼蜂起。 时巨鹿郡有兄弟三人：一名张角，一名张宝，一名张梁。那张角本是个不第秀才，因入山采药，遇一老人，碧眼童颜，手执藜杖，唤角至一洞中，以天书三卷授之，曰：“此名《太平要术》，汝得之，当代天宣化，普救世人。若萌异心，必获恶报。”角拜问姓名。老人曰：“吾乃南华老仙也。”言讫，化阵清风而去。角得此书，晓夜攻习，能呼风唤雨，号为“太平道人”。中平元年正月内，疫气流行，张角散施符水，为人治病，自称“大贤良师”···</string>
    <string name="novel_title">第一回 宴桃园豪杰三结义</string>
    <string name="replay_1">场景还原</string>
    <string name="replay_2">通过延迟深度链接技术，新安装应用首次打开接力推广中浏览的内容。\n\n 如果用户点击推广内容并完成下载应用，打开应用后完美还原到用户之前感兴趣的内容页面。</string>
    <string name="replay_3">基于未安装APP的前提下体验场景还原</string>
    <string name="news_1">极光魔链正式入驻极光开发者控制平台</string>
    <string name="news_2">深度链接技术是一个可以多种渠道中将用户带到应用内容页的简单方式，该技术可以让用户绕过的Web网站或者移动应用的首页直接访问其内容页，打破应用程序孤岛，实现网络与应用程序的无缝链接，在移动化的今天为应用程序的快速增长和变现提供新的可能。\n\n 早在今年3月21日，极光（Aurora Mobile，纳斯达克股票代码：JG）收购了魔窗（MagicWindow）旗下企业级深度链接（Deeplink）解决方案—mLink，并将其更名为极光魔链（JMLink），成为极光继消息推送，即时通讯，统计分析，社会化组件，短信和一键认证之后的又一全新产品线。极光魔链（JMLink）的加入，为开发者提供全方位的用户增长解决方案，助力产品商业互连提供了强有力的支持。\n\n 极光魔链（JMLink）目前已支持一链直达，场景还原，无码邀请，智能短链接，跨渠道监测等多种功能，并适配600+款机型，兼容20+款浏览器，支持的iOS和Android所有版本的一键直达。当用户未安装App时，其场景还原（Deferred Deeplink）功能会引导用户直接前往应用商店进行下载，下载后用户可以一步直达到想看的内容页。\n\n 即日起，开发者将可以通过极光开发者控制平台直接体验和使用新版本的极光魔链（JMLink），这也是继推送，统计，IM，短信，认证和分享之后加入极光开发者控制平台的又一新成员。 如您正使用旧版本的魔链服务，建议及时升级。请按照以下文档完成客户端集成和平台极光魔链应用的配置。同时极光会维护旧版本服务，若依旧使用旧版本服务，请访问（ mlinks.jiguang.cn）。产品介绍详情请访问帮助中心介绍和集成请访问帮助中心（mlinks.jiguang.cn/doc），如有任何疑问，请联系support@jiguang.cn邮箱。</string>
    <string name="news_3"><b>资源下载</b>\n下载JMLink SDK，资源获取地址： \nhttps://docs.jiguang.cn/jmlink/resources/ \n\n完成SDK下载，查看JMLink产品集成指南：\n https://docs.jiguang.cn/jmlink/guideline/intro/</string>
    <string name="params_1">JMLink 无码邀请</string>
    <string name="params_2">新用户免提填邀请信息，无繁琐的流程，自动跟\n踪邀请关系，助力裂变营销。</string>
    <string name="spread_1">累计推广人数</string>
    <string name="spread_2">扫码下载应用</string>
    <string name="spread_3">无需填写邀请码，扫码后自动绑定地推人员账号，其\n他手机扫码下载打开应用之后，已成功推广的人数+1</string>
    <string name="default_name">哈利菜菜</string>
    <string name="default_id">ID：99886688</string>
    <string name="default_number">0人</string>
    <string name="game_1">斗地主游戏房间</string>
    <string name="game_2">玩家一</string>
    <string name="game_3">玩家二</string>
    <string name="game_4">玩家三</string>
    <string name="game_5">邀请其他人加入游戏</string>
    <string name="game_6">创建新游戏</string>
    <string name="game_7">点击创建游戏后，游戏房间号会变，且自己是唯一玩家。</string>
    <string name="group_shop_1">拼团用户一</string>
    <string name="group_shop_2">创建拼团</string>
    <string name="welcome">极光魔链JMlink</string>
    <string name="game_8">房间号：</string>
    <string name="game_user_name_default">\?</string>
    <string name="akan1">分享好友</string>
</resources>