<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical">
    <cn.jiguang.jmlinkdemo.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_gravity="center"
                android:text="@string/news_1"
                android:textColor="#FF222328"
                android:textSize="20sp"
                />

            <ImageView
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:layout_gravity="center"
                android:src="@drawable/news"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/news_2"
                android:textColor="#FF222328"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/text"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_gravity="center"
                android:text="@string/news_3"
                android:textColor="#FF222328"
                android:textSize="16sp"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
