<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/description"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#999999"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFF2F2F2">
    </View>

    <TextView
        android:id="@+id/sceneAK"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sceneAK"
        android:textSize="18sp"
        android:textColor="@color/selector_text_press_color"
        android:gravity="center" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFF2F2F2">
    </View>
    <TextView
        android:id="@+id/schemeXS"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/schemeXS"
        android:textSize="18sp"
        android:textColor="@color/selector_text_press_color"
        android:gravity="center" />
    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="#FFF2F2F2">
    </View>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:textColor="@color/selector_text_press_color"
        android:gravity="center"/>

</LinearLayout>
