<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical">
    <cn.jiguang.jmlinkdemo.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <cn.jiguang.jmlinkdemo.shadow.ShadowLayout
        android:id="@+id/replay"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:shadowColor="#E6EDFF"
        app:bgColor="#FFFFFF"
        app:xOffset="0dp"
        app:yOffset="0dp"
        app:blurRadius="5dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/game_1"
            android:textColor="#FF222328"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/roomId"
            android:text="@string/game_8"
            android:textColor="#FF82838B"
            android:textSize="14sp"
            />

        <ImageView
            android:id="@+id/user1_avatar"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="23dp"
            android:layout_gravity="center"
            android:src="@drawable/user_default"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/user1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_user_name_default"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:textColor="#FF222328"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="vertical"
                android:layout_marginStart="15dp">

                <ImageView
                    android:id="@+id/user2_avatar"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="23dp"
                    android:layout_gravity="center"
                    android:src="@drawable/user_default"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/user2_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/game_user_name_default"
                    android:layout_marginTop="4dp"
                    android:textColor="#FF222328"
                    android:textSize="14sp" />
            </LinearLayout>
            
            <ImageView
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/game"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:orientation="vertical"
                android:layout_marginEnd="15dp">

                <ImageView
                    android:id="@+id/user3_avatar"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="23dp"
                    android:layout_gravity="center"
                    android:src="@drawable/user_default"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/user3_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/game_user_name_default"
                    android:layout_marginTop="4dp"
                    android:textColor="#FF222328"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </cn.jiguang.jmlinkdemo.shadow.ShadowLayout>

    <Button
        android:id="@+id/invite"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="312dp"
        android:layout_height="45dp"
        android:background="@drawable/button_shape"
        android:text="@string/game_5"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp">
    </Button>

    <Button
        android:id="@+id/create"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:layout_width="312dp"
        android:layout_height="45dp"
        android:background="@drawable/button_shape"
        android:text="@string/game_6"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp">
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_gravity="center"
        android:text="@string/game_7"
        android:textColor="#FF82838B"
        android:textSize="11sp"
        tools:ignore="SmallSp" />


</LinearLayout>