<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/view_share_wx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/share_wx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/wx" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/share_wx"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:text="@string/share_wx"
                android:textColor="#FF030303" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_share_wxp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/share_wxp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/wxp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/share_wxp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:text="@string/share_wxp"
                android:textColor="#FF030303"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_share_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/share_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/share_qq"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:text="@string/share_qq"
                android:textColor="#FF030303"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_share_qqk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/share_qqk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/qqk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/share_qqk"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:text="@string/share_qqk"
                android:textColor="#FF030303"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/view_share_browser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/share_browser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/browser" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/share_browser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:text="@string/share_browser"
                android:textColor="#FF030303"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_share_copy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/share_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/copy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/share_copy"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:text="@string/share_copy"
                android:textColor="#FF030303"/>
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible">
        </View>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible">
        </View>

    </LinearLayout>
</LinearLayout>